--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -36,6 +36,7 @@ button {
     height: 40px;
     border-radius: 5px;
     background: linear-gradient(135deg, #711F8D 0%, #A818DA 100%);
+    cursor: pointer;
 }
 
 button>p {
