--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -22,6 +22,10 @@ input {
 
 ::placeholder {
     padding-left: 11px;
+    color: #0D0D0D;
+    font-family: Karla;
+    font-size: 12px;
+    font-weight: 400;
 }
 
 .button {
