--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -15,13 +15,18 @@
 
 input {
     width: 230px;
-    height: 35px;
+    height: 38px;
     border-radius: 5px;
     border: 1px solid #D5D4D8;
 }
 
+input[type=text] {
+    width: 100%;
+    padding: 13px 13px;
+    box-sizing: border-box;
+}
+
 ::placeholder {
-    padding-left: 11px;
     color: #0D0D0D;
     font-family: Karla;
     font-size: 12px;
