--- a/src/components/meme/Meme.css
+++ b/src/components/meme/Meme.css
@@ -5,7 +5,7 @@
     margin-top: 36px;
 }
 
-.meme-image-container>.meme-img:hover {
+.meme-img:hover {
     transition: filter .Is ease-in-out;
     filter: brightness(50%);
 }
