--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,3 +1,4 @@
+/* form */
 .form-section {
     padding-top: 36px;
     padding-left: 36px;
@@ -24,6 +25,7 @@ input[type=text] {
     width: 100%;
     padding: 13px 13px;
     box-sizing: border-box;
+    font-family: Karla;
 }
 
 ::placeholder {
@@ -54,4 +56,45 @@ button>p {
     font-size: 16px;
     font-weight: 700;
     letter-spacing: -1px;
+}
+
+/* meme */
+.meme-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 36px;
+}
+
+.meme-img:hover {
+    transition: filter .Is ease-in-out;
+    filter: brightness(50%);
+}
+
+.meme-img {
+    width: 460px;
+    height: 268px;
+    border-radius: 7px;
+}
+
+.top-text {
+    position: absolute;
+    top: 16rem;
+    color: white;
+    font-family: Impact;
+    font-size: 32px;
+    font-weight: 900;
+    -webkit-text-stroke-width: 1.3px;
+    -webkit-text-stroke-color: black;
+}
+
+.bottom-text {
+    position: absolute;
+    top: 28.5rem;
+    color: white;
+    font-family: Impact;
+    font-size: 32px;
+    font-weight: 900;
+    -webkit-text-stroke-width: 1.3px;
+    -webkit-text-stroke-color: black;
 }
