--- a/src/components/challenge/challenge.css
+++ b/src/components/challenge/challenge.css
@@ -3,27 +3,24 @@
     color: lightslategrey;
 }
 
+.pos {
+    display: flex;
+    justify-content: center;
+}
+
 h1 {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 5vh;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
 }
 
 .boxes {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 0;
     float: left;
-    margin: 25vw;
     gap: 1rem;
-}
-
-.box {
-    border: 1px solid lightgray;
-    border-radius: 0.3em;
-    width: 100px;
-    height: 100px;
-    padding: 0;
 }
