--- a/src/components/Conditional rendering: &&/ConditionAnd.css
+++ b/src/components/Conditional rendering: &&/ConditionAnd.css
@@ -2,10 +2,16 @@
     background-color: #0a0d12;
     color: lightslategrey;
     box-sizing: border-box;
+    margin-left: 0.3rem;
+    margin-right: 0.4rem;
 }
 
 body {
     font-family: "Karla", sans-serif;
+}
+
+section {
+    margin-top: 1.8rem;
 }
 
 .line {
