added the `event.target.value`. This watches for changes in the values as typing happens. It is cimpulsory to add

--- a/src/components/forms/watch forinput changes/inputChanges.css
+++ b/src/components/forms/watch forinput changes/inputChanges.css
@@ -23,6 +23,8 @@ input[type=text] {
     padding: 20px 13px;
     box-sizing: border-box;
     font-family: Karla;
+    font-style: 20px;
+    font-weight: 200px;
 }
 
 ::placeholder {
