--- a/src/components/forms/watch forinput changes/inputChanges.css
+++ b/src/components/forms/watch forinput changes/inputChanges.css
@@ -22,17 +22,51 @@ section {
     gap: 2rem;
 }
 
-input {
-    width: 230px;
+.inputtext {
     height: 38px;
     border-radius: 5px;
     border: 1px solid #D5D4D8;
     margin-top: 1rem;
 }
 
+/* Style the container div */
+.inputcheck {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.checkbox-input {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border: 2px solid lightslategray;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-right: 10px;
+    outline: none;
+}
+
+.checkbox-input:checked {
+    background-color: lightslategray;
+    border-color: lightslategray;
+}
+
+/* Style the label */
+.checkbox-label {
+    color: grey;
+    font-family: Karla;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+}
+
 input[type=text] {
     width: 100%;
-    padding: 20px 30px;
+    padding: 20px 10px;
     box-sizing: border-box;
     font-family: Karla;
     font-style: 20px;
