--- a/src/components/forms/watch forinput changes/inputChanges.css
+++ b/src/components/forms/watch forinput changes/inputChanges.css
@@ -40,10 +40,10 @@ section {
 .checkbox-input {
     appearance: none;
     -webkit-appearance: none;
-    width: 20px;
-    height: 20px;
-    background-color: white;
-    border: 2px solid lightslategray;
+    width: 25px;
+    height: 25px;
+    background-color: darkslategray;
+    border: 2px solid grey;
     border-radius: 50%;
     cursor: pointer;
     margin-right: 10px;
@@ -51,8 +51,8 @@ section {
 }
 
 .checkbox-input:checked {
-    background-color: lightslategray;
-    border-color: lightslategray;
+    background-color: green;
+    border-color: grey;
 }
 
 /* Style the label */
