--- a/src/components/form/Meme.css
+++ b/src/components/form/Meme.css
@@ -79,22 +79,52 @@ button>p {
 
 .top-text {
     position: absolute;
-    top: 15rem;
+    top: 6.9em;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
     color: white;
-    font-family: Impact;
-    font-size: 32px;
-    font-weight: 900;
-    -webkit-text-stroke-width: 1.3px;
-    -webkit-text-stroke-color: black;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
 }
 
 .bottom-text {
     position: absolute;
-    top: 24.9rem;
+    top: 12em;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
     color: white;
-    font-family: Impact;
-    font-size: 32px;
-    font-weight: 900;
-    -webkit-text-stroke-width: 1.3px;
-    -webkit-text-stroke-color: black;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
 }
