--- a/src/components/useEffect/useEffectDep.css
+++ b/src/components/useEffect/useEffectDep.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    /* font-family: 'Inter', sans-serif; */
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     background-color: #11131d;
     color: #D9D9D9;
     padding: 20px;
-    height: 100vh;
+    height: 97vh;
     display: flex;
     justify-content: center;
     align-items: center;
