--- a/src/components/useEffect/useEffectDep.css
+++ b/src/components/useEffect/useEffectDep.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /* font-family: 'Inter', sans-serif; */
 }
 
 body {
@@ -9,21 +8,30 @@ body {
     background-color: #11131d;
     color: #D9D9D9;
     padding: 20px;
-    height: 97vh;
+    height: 96vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+h2 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+}
+
 button {
-    height: 65px;
-    width: 65px;
-    border-radius: 50%;
+    padding: 0;
+    margin-top: -15px;
+    height: 45px;
+    width: 260px;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
     background-color: #0a0d12;
     color: #D9D9D9;
-    font-size: 1.5rem;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
 }
 
 button:hover {
