--- a/src/components/useEffect/useEffectDep.css
+++ b/src/components/useEffect/useEffectDep.css
@@ -7,8 +7,8 @@ body {
     font-family: 'Inter', sans-serif;
     background-color: #11131d;
     color: #D9D9D9;
-    padding: 20px;
-    height: 96vh;
+    padding-top: 50px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,4 +41,9 @@ button:hover {
 
 button:focus {
     outline: none;
+}
+
+.parentpos {
+    position: absolute;
+    top: 1px;
 }
