--- a/src/components/stateAndEffect/StateAndEffect.css
+++ b/src/components/stateAndEffect/StateAndEffect.css
@@ -1,10 +1,12 @@
 * {
     margin: 0;
     color: grey;
+    box-sizing: border-box;
 }
 
 body {
     background: #11141e;
+    padding-top: 5em;
 }
 
 /* width */
@@ -27,4 +29,37 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     /* background: #0b0e15; */
+}
+
+section {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    width: 300px;
+    height: 40px;
+    border-radius: 5px;
+    background: linear-gradient(135deg, #711F8D 0%, #A818DA 100%);
+    cursor: pointer;
+    margin-bottom: 1rem;
+}
+
+button>p {
+    color: lightgray;
+    font-family: Karla;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: -1px;
+}
+
+h1 {
+    text-align: center;
 }
